test/configCases/errors/multi-entry-missing-module/test.config.js
"use strict";

module.exports = {
	findBundle() {
		return ["./a.js", "./b.js", "./bundle0.js"];
	}
};
